Fix shared parameter, not loading if page takes too long

--- a/work/src/css/style.scss
+++ b/work/src/css/style.scss
@@ -87,6 +87,7 @@ body {
 
 .content {
 	display: block;
+	height: 1024px;
 	width: 100%;
 	max-width: 90%;
 	margin: 0 auto;
